# wedge

./: .gitignore  README.md  TODOS.md  config.example.yaml  pyproject.toml
docs/: CONFIG.md  DATA.md  FINAL_NOAA_LADDER_DESIGN.md  STRATEGY.md  architecture.md
docs/strategy/: data-sources.md  overview.md  raw-market-overview.md  raw-math-derivation.md  当前套利策略_交易员版本.md  当前套利策略_对外版本.md  当前套利策略详解.md
src/weather_bot/: cli.py  config.py  db.py  pipeline.py  scheduler.py  telegram.py
src/weather_bot/execution/: dry_run.py  executor.py  live.py
src/weather_bot/market/: polymarket.py  scanner.py
src/weather_bot/monitoring/: metrics.py  notify.py
src/weather_bot/strategy/: edge.py  kelly.py  ladder.py  tail.py
src/weather_bot/weather/: client.py  ensemble.py  (+1 more)
src/wedge/: backtest.py  cli.py  config.py  config_manager.py  db.py  log.py  pipeline.py  scheduler.py  telegram.py
tests/: test_arb_scanner.py  test_arbitrage.py  test_balance_persistence.py  test_calibration.py  test_cli.py  test_coverage_gaps.py  test_db_phase2.py  test_dry_run.py  test_dry_run_pnl.py  test_edge.py  test_ensemble.py  test_events.py  test_kelly.py  test_ladder_only_runtime.py  test_live_executor.py  test_log.py  test_log_file.py  test_metrics.py  test_noaa_weather.py  test_notify.py  test_performance.py  test_performance_missing.py  test_pipeline_full.py  test_polymarket.py  test_position_dedup.py  test_risk.py  test_scanner.py  test_scheduler_full.py  test_scheduler_phase2.py  test_settlement.py  test_strategy.py  test_tail_strategy.py  test_telegram_full.py  test_weather_client.py
(+28 files in other folders)
