[project]
name = "wedge"
version = "0.1.0"
description = "7x24 automated weather prediction market trading bot"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "apscheduler>=3.10",
    "py-clob-client>=0.1",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "pyyaml>=6.0",
    "aiosqlite>=0.20",
    "typer>=0.12",
    "structlog>=24.0",
    "python-telegram-bot>=21.0",
]

[project.scripts]
wedge = "weather_bot.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/weather_bot"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "hypothesis>=6.0",
    "ruff>=0.8",
]
